# TROLoad

./: .flake8  .gitignore  .python-version  Dockerfile  Dockerfile.bkp  LICENSE  Makefile  README.md  TROLoad.code-workspace  docker-compose-devl.yaml  docker-compose-prod.yaml  docker-compose-test.yaml  docker-compose.yaml  install-packages.sh  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  troload.code-workspace  troload_au.cfg
.devcontainer/: devcontainer.json
.github/workflows/: codeql-analysis.yml
.obsolete/: .flake8
Ansible/: Makefile  Vagrantfile  ansible.cfg
Ansible/.vagrant/bundler/: global.sol
Ansible/.vagrant/machines/vagrant1/utm/: action_provision  action_set_name  id  index_uuid
Ansible/.vagrant/machines/vagrant2/utm/: action_provision  action_set_name  id  index_uuid  vagrant_cwd
Ansible/.vagrant/machines/vagrant3/utm/: action_provision  action_set_name  id  index_uuid
Ansible/inventory/: devl_swarm.yaml  hosts  hosts_test_swarm
Ansible/inventory/.archive/: hosts.bkp  vagrant.ini
Ansible/inventory/.obsolete/: vagrant.ini
Ansible/playbooks/: TROLoadTrans.yaml  TROLoadTrans_p1.yaml  TROLoadTrans_p2.yaml  dep_2  sample.yaml  test.yaml  test_app.yaml  troloadbank_deploy  troloadbank_deploy.yaml
Ansible/playbooks/templates/: etc_hosts_linux.j2
Ansible/templates/: index.html.j2
Docker/: Dockerfile  Dockerfile.1  Makefile
docs/: TRO Load System Guide.md  TRO Load User's Guide.md  TROLoad System Guide.md  TROLoad User's Guide.md  development.md  index.md  modules.md  my_notes.md
etc/: requirements.in  requirements.txt  troload.cfg  troload_au.cfg
load/: Dockerfile
load/src/local/python/: troload.py
local/etc/: troload.cfg
local/log/: t.txt
local/python/: __init__.py  accounts.py  categories.py  csv_file.py  csv_processor.py  function_logger.py  function_wrapper.py  transactions.py  transwkbk.py  troload.py
local/python/modules/: DataLoad.py  jspgeng.py  jsstdrpt.py  tab_nodes.py
local/sql/: grant_permsissions.sql  set_beginning_balances.sql
local/stage/: Transactions_01-01-21_06-25-21.xlsx.bkp  t.txt
logs/: tests.functional_tests
python/: __init__.py  categories_CSV_processor.py  categories_table.py  category_data.py  category_groups.py  category_table.py  std_logging.py  transactions_excel_processor.py  troload.py
share/: devl
sql/: jeff.sql  set_start.sql
src/: base_app.py  transwkbk.py  troload.py
src/loadbank/python/: __init__.py  loadbank.py
src/loadinvest/etc/: troload_au.cfg
src/loadinvest/python/: __init__.py  category_data.py
src/loadprop/etc/: troload.cfg
src/loadprop/sql/: jeff.sql
src/local/etc/: troload.cfg
src/local/python/: accounts.py  categories.py  transactions.py  troload.py
src/local/python/modules/: jspgeng.py  jsstdrpt.py
src/local/sql/: 00cf542f8e32
src/local/tmp/: Transaction Test.xlsx
src/troload/: Makefile  __init__.py
src/troload/docs/: TROLoad Bugs & New Features.docx alias  TROLoad System Guide.md
src/troload/etc/: troload.cfg  troload.cfg.bkp  troload_au.cfg
src/troload/python/: __init__.py  accounts.py  categories_CSV_processor.py  categories_table.py  category_types.py  std_app.py  std_dbconn.py  std_report.py  transactions.py  transactions_excel_processor.py  transactions_processor.py  troload.py  troloadtrans.py
src/troload/sql/: grant_permsissions.sql
src/troload/stage/: categories.csv.bkp
src/troloadbank/: Docker_Volume  Dockerfile  Makefile  env  pyproject.toml  stage
src/troloadbank/docs/: bugs_enhacemts.md
src/troloadbank/etc/: troloadbank.cfg
src/troloadbank/python/: categories_table.py  category_groups.py  troloadbank.py
src/troloadbank/src/: __init__.py  accounts.py  bank_trans.py  bank_trans_proc.py  bank_transactions_processor.py  categories_table.py  std_app.py  std_logging.py  std_report.py  transactions.py  troloadbank.code-workspace  troloadbank.py
src/troloadbank/src/TROLoadBank.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/troloadbank/src/etc/: .db_secrets.cfg  troloadbank.cfg
src/troloadbank/src/python/: __init__.py  bank_transactions_processor.py  category_groups.py  std_dbconn.py  std_report.py  transactions.py  troloadbank.py
src/troloadbank/tests/: Makefile  categories_table_unit_tests.py
src/troloadinvest/python/: categories_CSV_processor.py  category_groups.py  std_report.py  transactions.py  troloadtrans.py
src/troloadprop/python/: categories_CSV_processor.py  category_types.py  std_app.py  std_logging.py
src/troloadprop/sql/: grant_permsissions.sql
src/troloadtrans/python/: accounts.py  transactions_processor.py  troloadtrans.py
stage/: Trans_test_1.xlsx.bkp  test_file.csv
test/: functional-test.py
test/troload.egg-info/: PKG-INFO
tests/: Makefile  __init__.py  categories_table_CRUD_unit_tests.py  categories_table_unit_tests.py  csv_processor_unit_tests.py  functional-tests.py  functional_tests.py  unit-tests.py
tests/TestInputFiles/: transactions_2022_q4.xlsx.bkp
tests/mock_files/: categories.csv  categories_test_only.csv.bkp  transactions_2022_q1.xlsx.bkp
tests/stage/: categories.csv  transactions_2022_q2.xlsx.bkp  transactions_2022_q3.xlsx.bkp
tests/troload.egg-info/: SOURCES.txt
troload/: Dockerfile  install-packages.sh  requirements.txt
troload/src/local/python/: accounts.py  troload.py
