[tool.poetry]
name = "troload"
version = "0.1.0"
description = ""
authors = ["Jeff <js8335@swbell.net>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
