[project]
name = "TROLoadTrans"
version = "1.2.1"
description = "Pod to load transaction data from Quicken into the TRO database."
authors = [{ name = "Jeff Smith", email = "jasmit@swbell.net" }]
readme = "README.md"
keywords = ['python', 'pandas', 'quicken', 'database']
requires-python = ">=3.12,<3.13"
dependencies = [
]

[project.urls]
Homepage = "https://jasmit.github.io/TROLoad/"
Repository = "https://github.com/jasmit/TROLoad"
Documentation = "https://jasmit.github.io/TROLoad/"

#  [tool.uv]
#  dev-dependencies = [
#      "mkdocs-material>=8.5.10",
#      "mkdocstrings[python]>=0.26.1",
#      "mypy>=0.991",
#      "pre-commit>=2.20.0",
#      "pytest-cov>=4.0.0",
#      "ruff>=0.6.9",
#      "tox-uv>=1.11.3",
#  ]
[tool.uv]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

#  [dependency-groups]
#  dev = [
#      "autoflake>=2.3.1",
#      "config>=0.5.1",
#      "deptry>=0.20.0",
#      "mkdocs>=1.6.1",
#      "pytest>=8.3.3",
#  ]
#  app = [
#      "openpyxl>=3.1.5",
#  ]

[tool.mypy]
files = ["src"]
disallow_any_unimported = "False"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"
disallow_untyped_defs = "False"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
src = ["src"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # ImportNotAtTop
    "E402",
    # LineTooLong
    "E501",
    # Starting a process with a shell
    "S605",
    "S607",
    #  Use context manager for files
    "SIM115",
    # Long messsages
    "TRY003",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["troloadtrans"]

[tool.deptry]
ignore = ["DEP001"]
