#########################################

[project]
name = "TROLoadBank"
version = "2.0.2"
description = "Load banking transaction data from Quicken into the TRO database."
authors = [{ name = "jasmit", email = "jasmit@swbell.net" }]
readme = "README.md"
keywords = ['python', 'pandas', 'quicken', 'postgres']
requires-python = ">=3.13,<3.14"
dependencies = [
    "jasmit-firestarter>=0.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.7",
    "schedule>=1.2.2",
]

[project.urls]
Homepage = "https://jasmit.github.io/TROLoad/"
Repository = "https://github.com/jasmit/TROLoad"
Documentation = "https://jasmit.github.io/TROLoad/"

#  [project.scripts]
#  troloadbank = "troloadbank"

#########################################

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

#  [tool.setuptools.dynamic]
#  version = { attribute = "troloadtrans.__version__", write_to = "src/troloadtrans/__version__.py" }
#  version = { [ attr = "src/troloadbank.__version__" ]}


#########################################

[tool.mypy]

files = ["src"]
check_untyped_defs = "True"

disable_error_code = ["import-untyped"]
disallow_any_unimported = "False"
disallow_untyped_defs = "False"
ignore_missing_imports = "False"
no_implicit_optional = "True"
show_error_codes = "True"
warn_return_any = "True"
warn_unused_ignores = "True"

[[tool.mypy.overrides]]
module = ["jasmit_firestarter.*"]
follow_untyped_imports = true

#########################################

[tool.pytest.ini_options]
testpaths = ["tests"]

#########################################

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
src = ["src"]

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # ImportNotAtTop
    "E402",
    # LineTooLong
    "E501",
    # Starting a process with a shell
    "S605",
    "S607",
    #  Use context manager for files
    "SIM115",
    # Long messsages
    "TRY003",
]

#########################################

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["troloadbank"]

#########################################

[tool.deptry]
ignore = ["DEP001"]

#########################################
